# 10XvParse

./: .gitignore  README.md  environment.yml  generate_index.sh  getReadNum.out  nohup.out  parse_test.out  pyproject.toml  truncated_env.yml
Analysis 1/: 10x_test.ipynb  combo_test.ipynb  parse_test.ipynb
Analysis 1/parse_extraction/: config_RT_randO.txt  keep_wells.txt
Analysis 1/wells_out/: matrix.cells  matrix.sample.barcodes
Analysis 2/: 10x_test.ipynb  cellbender_test.ipynb  combo_test.ipynb  doublet_test.ipynb  gene_attributes.csv  gene_body.ipynb  parse_test.ipynb  tmp.report.nbconvert.ipynb
Analysis 2/SRA_accession/: 10x_accession.txt  parse_accession.txt
Analysis 2/parse_extraction/: batch_wells.txt  config_RT_polyT.txt  config_RT_randO.txt  config_correct.txt  keep_wells.txt
Analysis 3/: 10x_test.ipynb  cellbender_test.ipynb  doublet_test.ipynb  gene_attributes.csv  parse_test.ipynb  tmp.report.nbconvert.html  tmp.report.nbconvert.ipynb
Analysis 3/parse_extraction/: 10x_accession.txt  batch_wells.txt  config_RT.txt  config_RT_polyT.txt  config_RT_randO.txt  config_correct.txt  keep_wells.txt  parse_accession.txt
Analysis 4/: 10x_test.ipynb  cellbender_test.ipynb  parse_test.ipynb
Analysis 4/parse_extraction/: batch_wells.txt  config_RT_polyT.txt  config_correct.txt  config_wells.txt  keep_wells.txt
Configs/: analysis2.yaml  analysis3.yaml  analysis4.yaml  analysis5.yaml  analysis6.yaml  analysis7.yaml
Notebooks/Analysis_2/: 10x.ipynb  (+1 more)
Scripts/: analysis2.py  analysis3.py  analysis4.py  analysis5.py  analysis6.py  analysis7.py  getReadNum.sh
(+97 files in other folders)
