[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "XvP_utils"
version = "0.1.0"
requires-python = ">=3.8"
description="Helpers for 10X vs Parse Analysis"

dependencies = [
    "anndata",
    "pandas",
    "numpy",
    "matplotlib",
    "scrublet",
    "scanpy",
    "pybiomart",
    "scipy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["XvP_utils*"]